@@ -36,3 +36,5 @@ Not red backgroud on "Gefaehrliche Vibrationen"
 flights by week graph works for seasons
 VBar log window show content without scrolling
 VBar log window have red text for severity 4
+VPlane and VCopter implemented
+ 
